force-app/main/default/objects/Voucher__c/fields/Voucher_Cost__c.field-meta.xml
<CustomField>
    <fullName>Voucher_Cost__c</fullName>
    <label>Voucher Cost</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>